sync config template versions